RESOLVED FIXED204842
getStats() promise never rejects nor resolves when peer connection state is closed.
https://bugs.webkit.org/show_bug.cgi?id=204842
Summary getStats() promise never rejects nor resolves when peer connection state is c...
olsviate
Reported 2019-12-04 00:17:30 PST
seems like a duplicate of #167571. Promise never resolves nor rejects, when peer connection state is closed. Jsfiddle to demonstrate the behaviour: https://jsfiddle.net/qzeoy4mL/
Attachments
Patch (7.03 KB, patch)
2019-12-04 02:56 PST, youenn fablet
no flags
Patch (7.70 KB, patch)
2019-12-04 05:32 PST, youenn fablet
no flags
Patch for landing (7.66 KB, patch)
2019-12-05 02:20 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2019-12-04 00:26:05 PST
youenn fablet
Comment 2 2019-12-04 02:56:50 PST
youenn fablet
Comment 3 2019-12-04 05:32:10 PST
Eric Carlson
Comment 4 2019-12-04 08:46:33 PST
Comment on attachment 384805 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=384805&action=review > Source/WebCore/ChangeLog:9 > + Instead of closing and nullling the backend when closing the peer connection, s/nullling/nulling/
youenn fablet
Comment 5 2019-12-05 02:20:03 PST
Created attachment 384889 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-12-05 04:56:27 PST
Comment on attachment 384889 [details] Patch for landing Clearing flags on attachment: 384889 Committed r253146: <https://trac.webkit.org/changeset/253146>
WebKit Commit Bot
Comment 7 2019-12-05 04:56:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.